--- a/Smartspend/app/src/main/res/layout/activity_base.xml
+++ b/Smartspend/app/src/main/res/layout/activity_base.xml
@@ -33,14 +33,14 @@
                 android:layout_height="20dp"
                 android:layout_gravity="center"
                 android:src="@drawable/home"
-                android:contentDescription="Home" />
+                android:contentDescription="@string/home_description" />
         </FrameLayout>
 
         <TextView
             android:id="@+id/home_label"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Home"
+            android:text="@string/home_label"
             android:textColor="#FFFFFF"
             android:textSize="10sp"
             android:gravity="center" />
@@ -69,14 +69,14 @@
                 android:layout_height="20dp"
                 android:layout_gravity="center"
                 android:src="@drawable/bell"
-                android:contentDescription="Notifications" />
+                android:contentDescription="@string/notifications_description" />
         </FrameLayout>
 
         <TextView
             android:id="@+id/notifications_label"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Notifications"
+            android:text="@string/notifications_label"
             android:textColor="#FFFFFF"
             android:textSize="10sp"
             android:gravity="center" />
@@ -105,14 +105,14 @@
                 android:layout_height="20dp"
                 android:layout_gravity="center"
                 android:src="@drawable/plus"
-                android:contentDescription="Add Record" />
+                android:contentDescription="@string/add_record_description" />
         </FrameLayout>
 
         <TextView
             android:id="@+id/add_record_label"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Add Record"
+            android:text="@string/add_record_label"
             android:textColor="#FFFFFF"
             android:textSize="10sp"
             android:gravity="center" />
@@ -141,14 +141,14 @@
                 android:layout_height="20dp"
                 android:layout_gravity="center"
                 android:src="@drawable/ic_profile"
-                android:contentDescription="Profile" />
+                android:contentDescription="@string/profile_description" />
         </FrameLayout>
 
         <TextView
             android:id="@+id/profile_label"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Profile"
+            android:text="@string/profile_label"
             android:textColor="#FFFFFF"
             android:textSize="10sp"
             android:gravity="center" />
@@ -177,14 +177,14 @@
                 android:layout_height="20dp"
                 android:layout_gravity="center"
                 android:src="@drawable/settings"
-                android:contentDescription="Settings" />
+                android:contentDescription="@string/settings_description" />
         </FrameLayout>
 
         <TextView
             android:id="@+id/settings_label"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Settings"
+            android:text="@string/settings_label"
             android:textColor="#FFFFFF"
             android:textSize="10sp"
             android:gravity="center" />
