--- a/Smartspend/app/src/main/res/layout/activity_notifications.xml
+++ b/Smartspend/app/src/main/res/layout/activity_notifications.xml
@@ -1,3 +1,4 @@
+<?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
@@ -10,7 +11,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_margin="16dp"
-        android:text="Notifications"
+        android:text="@string/notifications_title"
         android:textColor="#FFFFFF"
         android:textSize="24sp"
         android:textStyle="bold"
@@ -32,7 +33,7 @@
         android:id="@+id/noNotificationsMessage"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="No notification yet"
+        android:text="@string/no_notifications_message"
         android:textColor="#AAAAAA"
         android:textSize="18sp"
         android:visibility="gone"
@@ -49,5 +50,4 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent" />
-
 </androidx.constraintlayout.widget.ConstraintLayout>
