--- a/Smartspend/app/src/main/res/layout/activity_profile.xml
+++ b/Smartspend/app/src/main/res/layout/activity_profile.xml
@@ -1,4 +1,3 @@
-<?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
@@ -16,7 +15,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="28dp"
         android:gravity="center"
-        android:text="Profile"
+        android:text="@string/profile_title"
         android:textColor="#FFFFFF"
         android:textSize="32sp"
         android:textStyle="bold"
@@ -29,7 +28,7 @@
         android:id="@+id/user_stats_heading"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="User Stats"
+        android:text="@string/user_stats_heading"
         android:textColor="#808080"
         android:textSize="14sp"
         android:textStyle="bold"
@@ -56,7 +55,7 @@
         android:id="@+id/active_goals"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Active Goals: X"
+        android:text="@string/active_goals"
         android:textColor="#FFFFFF"
         android:textSize="20sp"
         android:textStyle="bold"
@@ -69,7 +68,7 @@
         android:id="@+id/completed_goals"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Completed Goals: X"
+        android:text="@string/completed_goals"
         android:textColor="#FFFFFF"
         android:textSize="20sp"
         android:textStyle="bold"
@@ -82,7 +81,7 @@
         android:id="@+id/different_categories"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Different Categories: X"
+        android:text="@string/different_categories"
         android:textColor="#FFFFFF"
         android:textSize="20sp"
         android:textStyle="bold"
@@ -95,7 +94,7 @@
         android:id="@+id/upcoming_reminders"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Upcoming Reminders: X"
+        android:text="@string/upcoming_reminders"
         android:textColor="#FFFFFF"
         android:textSize="20sp"
         android:textStyle="bold"
@@ -109,7 +108,7 @@
         android:id="@+id/modify_profile_heading"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Modify Profile Information"
+        android:text="@string/modify_profile_heading"
         android:textColor="#808080"
         android:textSize="14sp"
         android:textStyle="bold"
@@ -136,7 +135,7 @@
         android:id="@+id/first_name_label"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="First Name"
+        android:text="@string/first_name_label"
         android:textColor="#808080"
         android:textSize="20sp"
         android:textStyle="bold"
@@ -162,7 +161,7 @@
         android:id="@+id/surname_label"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Surname"
+        android:text="@string/surname_label"
         android:textColor="#808080"
         android:textSize="20sp"
         android:textStyle="bold"
@@ -188,7 +187,7 @@
         android:id="@+id/email_label"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Email"
+        android:text="@string/email_label"
         android:textColor="#808080"
         android:textSize="20sp"
         android:textStyle="bold"
@@ -215,7 +214,7 @@
         android:id="@+id/phone_label"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Phone Number"
+        android:text="@string/phone_label"
         android:textColor="#808080"
         android:textSize="20sp"
         android:textStyle="bold"
@@ -244,7 +243,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="24dp"
         android:backgroundTint="#31453a"
-        android:text="Set"
+        android:text="@string/set_button_text"
         android:textColor="#FFFFFF"
         app:layout_constraintTop_toBottomOf="@id/etPhoneNumber"
         app:layout_constraintBottom_toTopOf="@id/bottom_nav"
