--- a/Smartspend/app/src/main/res/layout/activity_saving_goals.xml
+++ b/Smartspend/app/src/main/res/layout/activity_saving_goals.xml
@@ -12,7 +12,7 @@
         android:id="@+id/tvSavingGoalsTitle"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Saving Goals"
+        android:text="@string/saving_goals_title"
         android:textColor="#FFFFFF"
         android:textSize="36sp"
         android:textStyle="bold"
@@ -38,15 +38,13 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_margin="16dp"
-        android:contentDescription="AddGoal"
+        android:contentDescription="@string/add_goal_description"
         android:src="@drawable/baseline_add_24"
         app:tint="#212226"
-    android:backgroundTint="#3f6e56"
-    android:elevation="8dp"
-
+        android:backgroundTint="#3f6e56"
+        android:elevation="8dp"
         app:layout_constraintBottom_toTopOf="@id/bottom_nav"
         app:layout_constraintEnd_toEndOf="parent" />
-
 
     <include
         android:id="@+id/bottom_nav"
@@ -56,7 +54,5 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent" />
-
-
 
 </androidx.constraintlayout.widget.ConstraintLayout>
