--- a/Smartspend/app/src/main/res/layout/activity_settings.xml
+++ b/Smartspend/app/src/main/res/layout/activity_settings.xml
@@ -12,7 +12,7 @@
         android:id="@+id/settings_title"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Settings"
+        android:text="@string/settings_title"
         android:textColor="#FFFFFF"
         android:textSize="40sp"
         android:textStyle="bold"
@@ -36,7 +36,7 @@
         android:id="@+id/section_general"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="General"
+        android:text="@string/section_general"
         android:textColor="#808080"
         android:textSize="18sp"
         android:textStyle="bold"
@@ -49,7 +49,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:buttonTint="#FFFFFF"
-        android:text="Allow Notifications"
+        android:text="@string/checkbox_notifications"
         android:textColor="#FFFFFF"
         android:textSize="18sp"
         app:layout_constraintTop_toBottomOf="@id/section_general"
@@ -62,7 +62,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:buttonTint="#FFFFFF"
-        android:text="Enable SSO"
+        android:text="@string/checkbox_sso"
         android:textColor="#FFFFFF"
         android:textSize="18sp"
         app:layout_constraintTop_toBottomOf="@id/checkbox_notifications"
@@ -86,7 +86,7 @@
             android:id="@+id/label_language"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:text="Language"
+            android:text="@string/label_language"
             android:textColor="#FFFFFF"
             android:textSize="18sp"
             android:layout_weight="1" />
@@ -97,6 +97,7 @@
             android:layout_height="wrap_content"
             android:backgroundTint="#70FFB5"
             android:popupBackground="#1b1b1b"
+            android:textColor="#FFF"
             android:entries="@array/language_array"
             android:dropDownWidth="wrap_content"
             android:spinnerMode="dropdown"
@@ -117,7 +118,7 @@
         android:id="@+id/section_account"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Account"
+        android:text="@string/section_account"
         android:textColor="#808080"
         android:textSize="18sp"
         android:textStyle="bold"
@@ -129,7 +130,7 @@
         android:id="@+id/view_profile"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="View Profile"
+        android:text="@string/view_profile"
         android:textColor="#FFFFFF"
         android:textSize="18sp"
         app:layout_constraintTop_toBottomOf="@id/section_account"
@@ -142,7 +143,7 @@
         android:layout_width="200dp"
         android:layout_height="wrap_content"
         android:backgroundTint="#31453a"
-        android:text="Sign Out"
+        android:text="@string/btn_sign_out"
         android:textColor="#FFFFFF"
         android:padding="12dp"
         app:layout_constraintTop_toBottomOf="@id/view_profile"
