--- a/Smartspend/app/src/main/res/layout/dialog_add_record.xml
+++ b/Smartspend/app/src/main/res/layout/dialog_add_record.xml
@@ -6,19 +6,18 @@
     android:layout_height="wrap_content"
     android:padding="16dp"
     android:background="@drawable/popup_border"
-
     android:gravity="center">
 
-<TextView
-android:id="@+id/dialog_title"
-android:layout_width="wrap_content"
-android:layout_height="wrap_content"
-android:text="Add Record"
-android:textColor="#FFFFFF"
-android:textSize="20sp"
-android:layout_gravity="center"
-android:textStyle="bold"
-android:paddingBottom="16dp" />
+    <TextView
+        android:id="@+id/dialog_title"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/add_record_label"
+        android:textColor="#FFFFFF"
+        android:textSize="20sp"
+        android:layout_gravity="center"
+        android:textStyle="bold"
+        android:paddingBottom="16dp" />
 
     <Button
         android:id="@+id/button_income"
@@ -27,7 +26,7 @@ android:paddingBottom="16dp" />
         android:layout_marginBottom="16dp"
         android:backgroundTint="#DE31453A"
         android:padding="12dp"
-        android:text="Income"
+        android:text="@string/income_label"
         android:textColor="#6FFDB4"
         android:textSize="18sp"
         android:textStyle="bold"
@@ -41,7 +40,7 @@ android:paddingBottom="16dp" />
         android:layout_height="78dp"
         android:backgroundTint="#DE31453A"
         android:padding="12dp"
-        android:text="Expense"
+        android:text="@string/expenses_label"
         android:textColor="#FD6A6A"
         android:textSize="18sp"
         android:textStyle="bold"
@@ -49,4 +48,4 @@ android:paddingBottom="16dp" />
         app:strokeColor="#FD6A6A"
         app:strokeWidth="3dp" />
 
-    </LinearLayout>
+</LinearLayout>
