fixed dropdown items not showing

--- a/Smartspend/app/src/main/res/layout/activity_settings.xml
+++ b/Smartspend/app/src/main/res/layout/activity_settings.xml
@@ -97,7 +97,7 @@
             android:layout_height="wrap_content"
             android:backgroundTint="#70FFB5"
             android:popupBackground="#1b1b1b"
-            android:textColor="#FFF"
+            android:textColor="#FFFFFF"
             android:entries="@array/language_array"
             android:dropDownWidth="wrap_content"
             android:spinnerMode="dropdown"
