--- a/Smartspend/app/src/main/res/layout/spinner_item.xml
+++ b/Smartspend/app/src/main/res/layout/spinner_item.xml
@@ -2,7 +2,7 @@
 <TextView xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:textColor="#FFFFFF"
+    android:textSize="18sp"
     android:padding="8dp"
-    android:textSize="16sp"
-    />
+    android:textColor="#FFFFFF"
+    android:background="#1b1b1b" />
