--- a/Smartspend/app/src/main/res/layout/dialog_add_goal.xml
+++ b/Smartspend/app/src/main/res/layout/dialog_add_goal.xml
@@ -10,7 +10,7 @@
         android:id="@+id/title"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="New Goal"
+        android:text="@string/new_goal"
         android:textColor="#FFFFFF"
         android:textSize="24sp"
         android:textStyle="bold"
@@ -25,7 +25,7 @@
         android:layout_marginTop="16dp"
         android:layout_marginHorizontal="16dp"
         android:background="@drawable/edittext_green_border"
-        android:hint="Goal Name"
+        android:hint="@string/goal_name"
         android:padding="16dp"
         android:textColor="#FFFFFF"
         android:textColorHint="#FFFFFF"
@@ -40,7 +40,7 @@
         android:layout_marginTop="16dp"
         android:layout_marginHorizontal="16dp"
         android:background="@drawable/edittext_green_border"
-        android:hint="Total Amount"
+        android:hint="@string/total_amount"
         android:inputType="numberDecimal"
         android:padding="16dp"
         android:textColor="#FFFFFF"
@@ -56,7 +56,7 @@
         android:layout_marginTop="16dp"
         android:layout_marginHorizontal="16dp"
         android:background="@drawable/edittext_green_border"
-        android:hint="Saved Amount"
+        android:hint="@string/saved_amount"
         android:inputType="numberDecimal"
         android:padding="16dp"
         android:textColor="#FFFFFF"
@@ -72,7 +72,7 @@
         android:layout_marginTop="24dp"
         android:backgroundTint="#31453a"
         android:padding="16dp"
-        android:text="Save"
+        android:text="@string/save"
         android:textColor="#FFFFFF"
         android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
