--- a/Smartspend/app/src/main/res/layout/activity_settings.xml
+++ b/Smartspend/app/src/main/res/layout/activity_settings.xml
@@ -94,7 +94,7 @@
         <Spinner
             android:id="@+id/spinner_language"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_height="48dp"
             android:backgroundTint="#70FFB5"
             android:popupBackground="#1b1b1b"
             android:textColor="#FFFFFF"
@@ -149,6 +149,8 @@
         app:layout_constraintTop_toBottomOf="@id/view_profile"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
+        app:strokeColor="#70FFB5"
+        app:strokeWidth="1dp"
         android:layout_marginTop="48dp" />
 
     <include
