Rank Progress Bar functional

--- a/Smartspend/app/src/main/res/layout/activity_goal_details.xml
+++ b/Smartspend/app/src/main/res/layout/activity_goal_details.xml
@@ -61,7 +61,7 @@
                 tools:text="$500 / $1,000" /> <!-- Placeholder, keep this for tools -->
 
             <ProgressBar
-                android:id="@+id/progressGoalCompletion"
+                android:id="@+id/progressRank"
                 style="?android:attr/progressBarStyleHorizontal"
                 android:layout_width="match_parent"
                 android:layout_height="20dp"
