--- a/Smartspend/app/src/main/res/layout/dialog_add_to_goal.xml
+++ b/Smartspend/app/src/main/res/layout/dialog_add_to_goal.xml
@@ -36,6 +36,7 @@
         android:padding="16dp"
         android:text="@string/add"
         android:textColor="#FFFFFF"
-        android:textStyle="bold" />
+        android:textStyle="bold"
+        />
 
 </LinearLayout>
