--- a/Smartspend/app/src/main/res/layout/dialog_create_reminder.xml
+++ b/Smartspend/app/src/main/res/layout/dialog_create_reminder.xml
@@ -115,13 +115,15 @@
         android:layout_height="60dp"
         android:layout_marginTop="24dp"
         android:text="@string/create_button"
-        android:backgroundTint="#70FFB5"
+        android:backgroundTint="#31453a"
         android:textColor="#FFFFFF"
         android:layout_marginBottom="16dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/date_to_notify_button"
         app:layout_constraintWidth_percent="0.7"
-        app:cornerRadius="30dp" />
+        app:cornerRadius="30dp"
+        app:strokeColor="#70FFB5"
+        app:strokeWidth="1dp"/>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
